fix: titles gap issues

--- a/frontend/src/widgets/Calendar/calendar.module.scss
+++ b/frontend/src/widgets/Calendar/calendar.module.scss
@@ -2,7 +2,7 @@
   padding: 42px 8%;
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  gap: 40px;
 }
 
 .calendar_image {
