--- a/frontend/src/widgets/UsefulPage/useful.module.scss
+++ b/frontend/src/widgets/UsefulPage/useful.module.scss
@@ -2,6 +2,7 @@
   padding: 42px 8%;
   display: flex;
   flex-direction: column;
+  gap: 40px;
 }
 .details_container {
   position: relative;
